--- a/index.html
+++ b/index.html
@@ -1,59 +1,13 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-
-<meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>iPad-Sprechstunden-Website</title>
-
-<link rel="stylesheet" href="/resources/style.css">
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>toterhase</title>
+    <p id="toterhase">Toterhase</p>
 </head>
-<body class="main">
-
-
-
-<nav class="menu">
-<a href="/"><img src="/resources/logo.png" class="logo"></a>
-
-<ul>
-<li><a href="/shortcut/">Kurzbefehl</a></li>
-<li><a href="/sitemap/">Sitemap</a></li>
-<li><a href="/hinweise/">Hinweise</a></li>
-<li><a href="/impressum/">Impresum</a></li>
-</ul>
-
-</nav>
-
-
-<div class="contents">
-<h1 class="ueberschrift">iPad-Sprechstunde</h1>
-
-<br>
-<br>
-
-<p>Komm mittwochs in der Mittagspause (12:20 bis 13:00) in den Raum E01. Dort findet w&ouml;chentlich die iPad-Sprechstunde statt.</p>
-<br>
-<p>Lade unseren Fehlerbehebungs-Kurzbefehl herunter: <a href="/shortcut/">Anleitung</a>.</p>
-<br>
-<p>Oder schicke uns eine Mail an <a href="mailto:ipad-sprechstunde@bergschule-heiligenstadt.de">ipad-sprechstunde@bergschule-heiligenstadt.de</a></p>
-<br>
-<p>Und lies dir die <a href="/hinweise/">Hinweise</a> &uuml;ber die iPad-Sprechstunde und die Website durch.</p>
-<br>
-<p>Die Tutorials, die im Kurzbefehl zur Verf&uuml;gung stehen, findest du au&szlig;erdem <a href="/tutorials/">hier</a>.</p>
-<br>
-<a href="/impressum/">Impressum</a>
-
-
-<br>
-
-
-<br>
-
-
-<!-- <a href='http://www.freevisitorcounters.com'>Counters</a> -->
-<!-- <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=db5481a245b2c0a72acc610b67b1b7b05b744115'></script> -->
-<!-- <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1066707/t/5"></script> -->
-
-</div>
-</body>
+<body onload="start_fenster()">
+    <button onclick="start_fenster()" >go</button>
+    <script src="resources/start.js"></script>
+</body >
 </html>
